[gd_scene load_steps=3 format=3 uid="uid://mu7jw16258m5"]

[ext_resource type="Script" path="res://UI/titlescreen.gd" id="1_briue"]
[ext_resource type="FontFile" uid="uid://be2nu5as08d7p" path="res://UI/saiba-45/SAIBA-45.ttf" id="2_ohu8g"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_briue")

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = -180.0
offset_right = 192.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_disabled_color = Color(0.466792, 0.592591, 0.518094, 1)
theme_override_colors/font_hover_pressed_color = Color(0.701961, 0.929412, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.913725, 0, 1)
theme_override_colors/font_pressed_color = Color(0.613211, 0.856354, 0.132053, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ohu8g")
theme_override_font_sizes/font_size = 57
text = "START GAME"

[node name="Exit Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -22.0
offset_right = 282.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_disabled_color = Color(0.466792, 0.592591, 0.518094, 1)
theme_override_colors/font_hover_pressed_color = Color(0.701961, 0.929412, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.913725, 0, 1)
theme_override_colors/font_pressed_color = Color(0.613211, 0.856354, 0.132053, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ohu8g")
theme_override_font_sizes/font_size = 34
text = "Exit to desktop"
autowrap_mode = 2

[node name="GenMessage" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -94.0
offset_right = 97.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ohu8g")
text = "GET READY TO SHAKE"
autowrap_mode = 2

[node name="GenTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Exit Button" to="." method="_on_exit_button_pressed"]
[connection signal="timeout" from="GenTimer" to="." method="_on_gen_timer_timeout"]
